# mp4_video_generation

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test_video_gen_basic.py  test_video_gen_contrast.py  test_video_gen_frame_rate.py  test_video_gen_pressure.py  test_video_gen_text.py  test_video_gen_title.py  test_video_gen_wave_data.py
mp4_video_generation/: fun_figs.py  fun_misc.py  image_manipulation.py  tiff_image_manipulation.py  video_handling.py
tests/: contrast_and_brightness.py  test_video_gen_all.py  test_video_gen_basic.py  test_video_gen_color.py  test_video_gen_concatenation.py  test_video_gen_frame_rate.py  test_video_gen_pressure.py  test_video_gen_title.py
