[build-system]
requires = ["hatchling", "numpy >= 1.19, < 2", "pandas >= 1.3.3, < 2", "nd2reader >= 3.3.0, < 4", "pims-nd2 >= 1.1, < 2", "matplotlib >= 3.5.2, < 4"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "videos/*.gif",
]

[project]
name = "mp4_video_generation"
version = "0.0.7"
authors = [
  { name="Oskar E. Strom", email="oskarestrom@protonmail.com" },
]
description = "Handing of nd2 image files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/oskarestrom/mp4_video_generation"
